--- a/pagination/src/App.css
+++ b/pagination/src/App.css
@@ -1,3 +1,12 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
+a{
+  list-style: none;
+}
+
 body{
   font-family: sans-serif;
 }
@@ -6,32 +15,42 @@ body{
   margin: 15px;
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap:15px;
+  grid-template-columns:1fr 1fr 1fr 1fr;
+gap: 15px;
 }
 .single-container{
   display: flex;
+  gap:5px;
   flex-direction: column;
   align-items: center;
-  height: 250px; /* width we don't give in display:grid  because we use grid-template-column */
+  /* width we don't give in display:grid  because we use grid-template-column */
   padding: 20px;
   background-color: gainsboro;
   border-radius: 5px;
 }
-.single-container img{
+.link{
+  height: 250px;
   width: 100%;
-  height: 90%;
-  margin-bottom: 10px;
-  border-radius: 5px;
   object-fit: cover;
-
 }
+.link img {
+
+
+  
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.single-container span{
+  margin-top: 5px;
+}
+
 .pagination-container{
  display: flex;
  gap:8px;
  justify-content: center; 
  align-items: center;
- margin-top: 40px;
+ margin-top: 80px;
  margin-bottom: 10px;
 }
 .pagination-container span{
@@ -50,4 +69,18 @@ border: 1px solid rgb(236, 229, 229);
 }
 .disableBtn{
   opacity: 0;
+}
+.single-product-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+}
+
+.single-product-container-details{
+  display: flex;
+  flex-direction: column;  
+
+}
+.single-product-container-details span{
+  padding: 5px 0px;
 }
